--- a/kube/paca-clock.yml
+++ b/kube/paca-clock.yml
@@ -1,28 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-deploy
+  name: paca-clock
 spec:
   replicas: 1  
   selector:
     matchLabels:
-      component: redis 
-  template:
-    metadata:
-      labels:
-        component: redis 
+      component: clock
     spec:
       containers:
-        - name: redis 
-          image: redis
+        - name: paca-clock
+          image: docker.io
           ports:
             - containerPort: 6379
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-clusterip-svc
+  name: redis-clusterip
 spec:
   type: ClusterIP 
   selector: 
@@ -30,4 +25,3 @@ spec:
   ports:
     - port: 6379
       targetPort: 6379
-
